--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "simple-git-hooks": "^2.8.1",
     "stylelint": "^15.3.0",
     "typescript": "^4.9.4",
+    "vconsole": "^3.15.0",
     "vite": "4.0.4",
     "vue-tsc": "^1.0.24"
   },
